@@ -68,20 +68,13 @@
 	<file name="$languagedir/Modifications.english.php">
 		<operation>
 			<search position="end" />
-			<add><![CDATA[// SMF Wiki
+			<add><![CDATA[
+// SMF Wiki
 $txt['wiki'] = 'Wiki';
 $txt['admin_wiki'] = 'Wiki';
 $txt['admin_wiki_main'] = 'Main';
 $txt['admin_wiki_settings'] = 'Settings';
-
-// Wiki Settings
-$txt['wikiEnabled'] = 'Enable Wiki';
-$txt['wiki_standalone_mode'] = 'Standalone Mode';
-$txt['wikiStandalone'] = 'Enable Standalone Mode';
-$txt['wikiStandalone_0'] = 'Disabled';
-$txt['wikiStandalone_1'] = 'Enabled';
-$txt['wikiStandalone_2'] = 'Enabled (Friendly URLs)';
-$txt['wikiStandaloneUrl'] = 'Standalone URL';]]></add>
+]]></add>
 		</operation>
 	</file>
 
