@@ -7,6 +7,7 @@ November 2008
 --------------------------------------------------------------------------------
  ! Redirect to correct case
  ! Allows page names to start with lowercase letter
+ + Added ability to change talk board
 
 Legend:
 --------------------------------------------------------------------------------
